@@ -680,7 +680,7 @@ IDummyTransformationSceneNode* CSceneManager::addDummyTransformationSceneNode(
 //! again using ISceneManager::getMesh with the name as parameter.
 IAnimatedMesh* CSceneManager::addHillPlaneMesh(const c8* name,
 		const core::dimension2d<f32>& tileSize,
-		const core::dimension2d<s32>& tileCount,
+		const core::dimension2d<u32>& tileCount,
 		video::SMaterial* material, f32 hillHeight,
 		const core::dimension2d<f32>& countHills,
 		const core::dimension2d<f32>& textureRepeatCount)
